--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=Pg123456$
+DB_USERNAME=Sa
+DB_PASSWORD=Tl576457$
 DB_NAME=pc-production-db
 
 # Application Configuration
